<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar.Bridge"
    >

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/extended_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|right"
        android:text="Hello"
        app:icon="@drawable/add_fab"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/textview"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/radiotext"
                />

            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:orientation="vertical"
                android:layout_below="@id/textview">

                <RadioButton
                    android:id="@+id/host"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/host" />

                <RadioButton
                    android:id="@+id/audience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/audience" />
            </RadioGroup>

            <TextView
                android:id="@+id/textview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/channelprompt"
                android:layout_below="@id/radio" />

            <EditText
                android:id="@+id/channel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:hint="VideoCallDemo"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_below="@id/textview2"/>

            <Button
                android:id="@+id/submit"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/submit"
                android:layout_below="@id/channel"
                />
        </RelativeLayout>


    </ScrollView>

</RelativeLayout>